--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-index.html
+
 <!DOCTYPE html>
 <html>
     <!-- this is a comment -->
@@ -13,6 +13,7 @@ index.html
             header {
                 text-align: center;
                 padding: 10px 0;
+                background-color: green;
             }
             section {
                 background-color: #fff;
